<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".ui.main.gallery.GalleryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rect_radius_20"
                android:backgroundTint="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:layout_marginVertical="25dp"
                    android:layout_marginStart="20dp"
                    app:cardCornerRadius="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageGalleryProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/profile" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textGalleryId"
                    style="@style/HomeProfileLightWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/cardView"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toBottomOf="@+id/textGalleryName"
                    tools:text="briandr" />

                <TextView
                    android:id="@+id/textGalleryName"
                    style="@style/HomeProfileWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:letterSpacing="0.1"
                    app:layout_constraintBottom_toTopOf="@+id/textGalleryId"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toTopOf="@+id/cardView"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="권용민" />

                <TextView
                    android:id="@+id/textSourceFrom"
                    style="@style/HomeProfileLightWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/sourceFrom"
                    android:textColor="@color/lightGray"
                    android:textSize="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textGalleryId" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutMyInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutTop">

                <TextView
                    android:id="@+id/textMyInfo"
                    style="@style/HomeBlackBoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myInfo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/lineMyInfo"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray"
                    app:layout_constraintTop_toBottomOf="@+id/textMyInfo" />

                <TextView
                    android:id="@+id/textMbti"
                    style="@style/HomeBlackNormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/textMbtiTitle"
                    app:layout_constraintStart_toStartOf="@+id/textAge"
                    app:layout_constraintTop_toTopOf="@+id/textMbtiTitle"
                    tools:text="ESTP" />

                <TextView
                    android:id="@+id/textMbtiTitle"
                    style="@style/HomeGraNormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mbti"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textAgeTitle" />

                <TextView
                    android:id="@+id/textPartTitle"
                    style="@style/HomeGraNormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/part"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textMbtiTitle" />

                <TextView
                    android:id="@+id/textAgeTitle"
                    style="@style/HomeGraNormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/age"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lineMyInfo" />

                <TextView
                    android:id="@+id/textPart"
                    style="@style/HomeBlackNormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Android"
                    app:layout_constraintBottom_toBottomOf="@+id/textPartTitle"
                    app:layout_constraintStart_toStartOf="@+id/textMbti"
                    app:layout_constraintTop_toTopOf="@+id/textPartTitle" />

                <TextView
                    android:id="@+id/textAge"
                    style="@style/HomeBlackNormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="26"
                    app:layout_constraintBottom_toBottomOf="@+id/textAgeTitle"
                    app:layout_constraintStart_toEndOf="@+id/textAgeTitle"
                    app:layout_constraintTop_toTopOf="@+id/textAgeTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutScholarship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutMyInfo">

                <TextView
                    android:id="@+id/textScholarship"
                    style="@style/HomeBlackBoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scholarship"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/lineScholarship"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray"
                    app:layout_constraintTop_toBottomOf="@+id/textScholarship" />

                <TextView
                    android:id="@+id/textUniversity"
                    style="@style/HomeGraNormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/university"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lineScholarship" />

                <TextView
                    android:id="@+id/textMajor"
                    style="@style/HomeBlackNormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/major"
                    app:layout_constraintBottom_toBottomOf="@+id/textUniversity"
                    app:layout_constraintStart_toEndOf="@+id/textUniversity"
                    app:layout_constraintTop_toTopOf="@+id/textUniversity" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutWebSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutScholarship">

                <TextView
                    android:id="@+id/textWebSite"
                    style="@style/HomeBlackBoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/lineWebSite"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray"
                    app:layout_constraintTop_toBottomOf="@+id/textWebSite" />

                <TextView
                    android:id="@+id/linkGithub"
                    style="@style/HomeBlackNormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/github"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textWebSite" />

                <TextView
                    android:id="@+id/linkInstagram"
                    style="@style/HomeBlackNormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/instagram"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linkGithub" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black"
                android:letterSpacing="0.1"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutWebSite" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>